src/scss/components/list_page.scss
.list-page-container {
  width: 100%;
  height: 100%;
  font-size: 0;
}

.list-page-header {
  position: relative;
  height: 64px;
  width: 100%;
  padding: 0 25px;
  display: flex;
  align-items: center;

  .vertical-divider {
    float: left;
    height: 20px;
    margin: 22px 10px;
  }

  .button.dropdown-button {
    font-size: 24px;
    padding: 4px;
    position: relative;
    width: 34px;
  }

  .toggle-button-group {
    position: inherit;
    left: auto;
    width: 25%;
  }

  .list-settings {
    text-transform: none;
    text-align: left;
  }

  .bulk-buttons-container {
    display: none;
    float: left;
    height: 64px;
    padding: 16px 0;

    .selection-count {
      margin-right: 20px;
      font-size: 16px;
      color: #0c0d0d;
      margin-bottom: 20px;
      vertical-align: middle;
      display: inline-block;
      cursor: default;
    }

    &.not-bulk-buttons .selection-count {
      margin-top: 9px;
    }

    .bulk-buttons {
      font-size: 24px;
      line-height: 24px;
      color: #696e6f;
      display: inline-flex;

      a {
        color: #696e6f;
      }

      .button {
        flex: 0 0 36px;

        &.disabled {
          opacity: 0.7;
          cursor: default;
        }

        &.button-icon > div {
          text-transform: none !important;
        }
      }
    }
  }

  .list-filter-container {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    align-content: center;
    width: 50%;
    height: 64px;
  }

  .list-dropdown-container {
    display: none;
  }

  .add-buttons-container {
    display: none;
    justify-content: flex-end;
    align-items: center;
    align-content: center;
  }

  .list-buttons-container {
    color: #696e6f;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    align-content: center;
    font-size: 24px;
    margin-left: auto;
    width: 50%;
  }
}

@media (max-width: 991.98px) {
  .list-page-header {
    .list-filter-container {
      width: 100%;
    }

    .list-buttons-container {
      display: none;
    }

    .list-dropdown-container,
    .toggle-button-group,
    .add-buttons-container {
      display: flex;
      flex-wrap: nowrap;
    }
  }

  .list-page-container:not(.single-line-header) .list-page-header {
    display: block;
    height: 128px;

    .list-dropdown-container,
    .toggle-button-group,
    .add-buttons-container {
      float: left;
      width: 25%;
    }

    .toggle-button-group {
      width: 50%;
    }
  }
}

.list-search {
  &.has-floating-label .input-text {
    padding-top: 10px;
  }

  &:not(.has-floating-label) .input-text {
    border-width: 2px;

    &:focus {
      box-shadow: none;
    }
  }
}

.list-page-container .list-search {
  margin: 0 24px;
}

@media (max-width: 991.98px) {
  .list-search {
    margin-left: 16px;
    margin-right: 16px;
  }

  .list-page-container .list-search {
    display: none;
  }
}

.list-filter-selector {
  border-bottom: 1px solid #dce3e6;
  display: inline-block;
  position: relative;
  z-index: 2;

  &:focus {
    border-color: #5269de;
    box-shadow: inset 0 -2px 0 #5269de;
    outline: 0;
  }
}

.list-filter-selector {
  .option-list {
    max-height: 220px;
  }

  i {
    vertical-align: middle;
  }
}

.list-filter-selector-selected {
  color: #0c0d0d;
  cursor: pointer;
  font-size: 13px;
  font-weight: 400;
  height: 28px;
  line-height: 24px;
  padding-right: 24px;
  position: relative;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.list-filter-selector-indicator {
  color: #696e6f;
  font-size: 16px;
  position: absolute;
  right: 8px;
  -ms-transform: translateY(-50%);
  -webkit-transform: translateY(-50%);
  transform: translateY(-50%);
  top: 50%;
}

.list-filter-selector-options {
  border-radius: 16px;
  box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.24);
  left: -20px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  right: -20px;
  top: -8px;
  z-index: 1;
  background-color: #fff;
  min-width: 300px;
  max-width: 500px;

  > hr {
    border: 0;
    border-bottom: 1px solid #dce3e6;
    display: block;
    height: 0;
    margin: 8px 0;
    padding: 0;
  }
}

.list-filter-selector.list-filter-selector-list {
  float: left;
  max-width: 400px;
  border-bottom: 0;
  width: auto;

  &:focus {
    box-shadow: none;
  }

  .list-filter-selector-selected {
    font-size: 16px;
  }

  .list-filter-selector-options {
    top: -35px !important;
    left: -15px !important;
  }

  .list-filter-selector-indicator {
    right: 0;
  }
}

.list-page-chart {
  position: relative;
  overflow: auto;
  height: -webkit-calc(100% - 88px);
  height: calc(100% - 88px);
  box-shadow: 10px 10px 35px 0 rgba(0, 0, 0, 0.08);
  background-color: #fff;
  border-radius: 8px;
  padding: 10px 20px 20px;
  margin: 0 24px 24px;
  z-index: 1;
}

@media (max-width: 991.98px) {
  .list-page-chart {
    height: -webkit-calc(100% - 144px);
    height: calc(100% - 144px);
    margin: 0 16px 16px;
  }
}

.list-chart-summary-control-row,
.list-chart-summary-number-item > div {
  display: inline-block;
}

.list-chart-summary {
  position: sticky;
  top: -10px;
  background-color: #fff;
  color: #0c0d0d;
  padding: 20px 0;
  z-index: 1;
}

.list-chart-summary-number-list {
  display: flex;
}

.list-chart-summary-number-item {
  display: flex;
  flex-direction: column;
  margin-right: 60px;
  position: relative;

  > div:first-child {
    order: 2;
    font-size: 29px;
    font-weight: 500;
    line-height: 0.72;
    opacity: 0.64;
  }

  > div:last-child {
    order: 1;
    font-size: 13px;
    font-weight: 600;
    opacity: 0.48;
  }

  .list-chart-summary-tooltip-info {
    position: relative;
    top: 3px;
  }
}

@media (max-width: 767.98px) {
  .list-chart-summary-number-item {
    margin-right: 10px;
  }
}

@media (max-width: 767.98px) {
  .list-chart-summary-number-item > div:first-child {
    font-size: 24px;
    line-height: 24px;
    font-weight: bold;
  }
}

.list-chart-summary-control-rows {
  font-size: 0;
  position: relative;

  &:after {
    content: '';
    position: absolute;
    width: 25px;
    top: 0;
    left: -25px;
    bottom: 0;
    background-color: #fff;
  }
}

.list-chart-summary-control-row {
  margin-right: 41px;
  position: relative;
  white-space: nowrap;

  &:last-child {
    margin-right: 0;
  }

  + .list-chart-summary-control-row:after {
    background: #dce3e6;
    bottom: 0;
    content: '';
    height: 30px;
    margin-left: 20px;
    margin-right: 20px;
    position: absolute;
    right: 100%;
    width: 1px;
  }
}

.list-chart-summary-filter {
  position: relative;
  vertical-align: bottom;
  display: flex;
  align-items: center;
  margin-bottom: 20px;

  .dropdown {
    width: 190px;
  }
}

.list-chart-summary-filter-label {
  color: #696e6f;
  font-size: 15px;
  font-weight: 600;
  line-height: normal;
  margin-right: 5px;
}

.list-chart-summary-filter-content {
  font-size: 15px;
  font-weight: 600;
}

.list-chart-summary-filter:not(:last-child) {
  margin-right: 41px;

  &:after {
    background: #dce3e6;
    bottom: 0;
    content: '';
    height: 30px;
    left: 100%;
    margin-left: 20px;
    margin-right: 20px;
    position: absolute;
    width: 1px;
  }
}

.list-page-stats {
  display: flex;
  justify-content: center;
  align-items: center;
  align-content: center;
  width: 100%;
  box-shadow: 10px 10px 35px 0 rgba(0, 0, 0, 0.08);
  background-color: #fff;
  border-radius: 8px 8px 0 0;
  z-index: 0;

  .list-page-stats-value {
    height: 84px;
    display: inline-block;
    margin-left: 27px;
    padding-top: 15px;
    text-align: center;

    .label {
      color: #696e6f;
      font-size: 13px;
      font-weight: 600;
    }

    .value {
      font-size: 29px;
      font-weight: 500;
      color: #0c0d0d;
      margin: 0;
    }
  }

  .odometer-currency {
    display: inline-block;
    float: left;
    font-size: 13px;
    font-weight: 500;
    color: #0c0d0d;
    margin: 24px 5px 0;
    cursor: default;

    .odometer {
      position: relative;
      top: -2px;
      left: -6px;
    }
  }

  .odometer-currency-odometer {
    font-family: inherit;
    margin-bottom: 1px;
  }
}

.list-page-table {
  height: -webkit-calc(100% - 64px);
  height: calc(100% - 64px);
  width: 100%;
  border: 0;
  display: inline-block;
  float: left;
  padding: 0 24px;

  &.has-stats {
    height: -webkit-calc(100% - 148px);
    height: calc(100% - 148px);

    .datagrid-tables-container {
      border-top-left-radius: 0;
      border-top-right-radius: 0;
      box-shadow: 10px 10px 35px -15px rgba(0, 0, 0, 0.08);
    }
  }
}

@media (max-width: 991.98px) {
  .list-page-table {
    height: -webkit-calc(100% - 128px);
    height: calc(100% - 128px);
    padding-left: 16px;
    padding-right: 16px;

    &.has-stats {
      height: -webkit-calc(100% - 212px);
      height: calc(100% - 212px);
    }
  }
}

.list-page-fake-drawer {
  display: inline-block;
  float: right;
}

.list-page-empty-content {
  border: 0;
  background: 0 0;
  position: absolute;
  top: 350px;
  left: 50%;
  -ms-transform: translate(-50%, -50%);
  -webkit-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);

  &.is-relative {
    position: relative;
    top: 100px;
  }

  .empty-icon {
    height: 128px;
    width: 128px;
    border-radius: 50%;
    background-color: #dce3e6;
    color: #fff;
    font-size: 90px;
    margin: 10px auto;
    text-align: center;
  }

  .empty-title {
    color: #dce3e6;
    font-size: 30px;
    font-weight: 700;
    margin: 10px auto;
    text-align: center;
  }

  .empty-message {
    color: #696e6f;
    font-size: 14px;
    margin: 10px auto;
    text-align: center;
  }
}

.has-navigation .list-page-empty-content {
  top: 400px;
}

@media (max-width: 991.98px) {
  .list-page-empty-content {
    top: 400px;
  }

  .has-navigation .list-page-empty-content {
    top: 450px;
  }
}

.list-page-loading-popup {
  bottom: 0;
  display: block;
  position: fixed;
  display: flex;
  align-items: center;
  justify-content: center;
  width: calc(100% - 48px);
  z-index: 10;
  transition: left 0.3s;
}

.sidebar-collapsed .list-page-loading-popup {
  left: 310px;
}

.list-loading-content {
  background: #fff;
  border-radius: 16px 16px 0 0;
  box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.24);
  box-sizing: border-box;
  display: inline-block;
  font-size: 13px;
  height: 48px;
  line-height: 46px;
  padding: 0 54px;
}

.list-loading-content-loading-spinner {
  display: inline-block;
  height: 20px;
  margin: 0 auto;
  vertical-align: middle;
  width: 20px;
}

